WebContent/style/base_ucn.css
/* ... */
textarea {
	font-size:0.9em;
}
input#ucn_uri, textarea {
	width:85%;
	
}
input#ucn_file {
	width:85%;
	padding-left:0.4em;
}
select.ucn_text_mime {
	margin-top:0.4em;
}
img.loader {
	margin: 1em;
}
#don_program {
	line-height:150%;
	padding:0.5em;
	text-align:center;
}
#don_program_img {
	float:left;
	height:60px;
	width:150px;
}
#don_program_img img {
	vertical-align:middle;
}
#don_program_text a {
	font-weight:bold;
	text-decoration:underline;
}
#lang_choice {
	margin-right:3em;
	min-width:40em;
	padding:0.5em 0;
	position:absolute;
	right:0;
	top:0;
	text-align:right;
	font-size:0.7em;
	line-height:100%;
}
#lang_choice li {
	display:inline;
	padding-left:0.5em;
}
#menu {
	text-align:center;
	padding:0.3em 0;
}
#menu li {
	margin-right:0.8em;
	display:inline;
}
#footer #activity_logos {
	float:left;
	padding-right:2em;
}
#footer #support_logo {
	float:right;
	padding-left:2em;
	padding-top:0.5em;
	width:90px;
}
#footer p.copyright {
	font-size:0.7em;
	line-height:1.4;
	text-align:center;
	text-transform:uppercase;
}

/* Backgrounds & colors */
body {
	font-family:Helvetica,Arial,Sans-Serif;
}
a:link, a:visited, legend, div.submit input {
	color:#365D95;
	text-decoration:none;
}
a:hover {
	color:#1F2126;
	text-decoration:underline;
}
div.submit input:hover {
	color:#1F2126;
}
#banner {
	background:#365D95 url(../images/head-br.png) no-repeat scroll right bottom;
}
#banner h1 {
	background:url(../images/head-bl.png) no-repeat scroll left bottom;
	color:#FDFDFD;
}
#banner h1 span {
	border-bottom:1px solid #4E6F9E;
}
#banner a:link, #banner a:hover, #banner a:visited, #banner a:active {
	color:#FDFDFD;
	text-decoration:none;
}
#banner p {
	color:#D0DCEE;
	letter-spacing:0.1em;
}
#tabset_tabs li {
	background:#DADDE3 url(../images/tab-tl.png) no-repeat scroll left top;
	border-bottom:1px solid #CBD0DB;
}
#tabset_tabs li.selected {
	background:#EAEBEE url(../images/round-tl.png) no-repeat scroll left top;
	border-bottom:1px solid #EAEBEE;
}
#tabset_tabs li a {
	outline: 0;
	font-weight:bold;
	background:#DADDE3 url(../images/tab-tr.png) no-repeat scroll right top;
}
#tabset_tabs li a:hover {
	text-decoration:none;
}
#tabset_tabs li.selected a {
	background:#EAEBEE url(../images/round-tr.png) no-repeat scroll right top;
	color:#1F2126;
}
p.instructions, span#task_descrip {
	color:#4D525E;
}
#fields {
	background:#EAEBEE url(../images/round-tr.png) no-repeat scroll right top;
}
#fields, #menu {
	background-color:#EAEBEE;
}
fieldset div.input, fieldset div.options, fieldset div.submit {
	background:url(../images/double.png) repeat-x scroll left top;
	border-top:1px solid #CBCDD5;
}
fieldset div.submit input {
	background:url(../images/button.png) no-repeat scroll left 1px;
}
#don_program {
	border:1px solid #55B05A;
}
#footer p.copyright {
	color:#7C8395;
}
#footer p.copyright a:link, #footer p.copyright a:visited {
	color:#A3756E;
}
#messages {
	font-size:0.9em;
	margin:1.1em 2.2em;
}
#messages .error, #messages .warning, #messages .info {
	padding:0.7em;
	border:2px solid;
	margin:0.6em 0;
}
#messages .error {
	color:#8A1F11;
	border-color:#FBC2C4;
	background:#FBE3E4;
}
#messages .warning {
	color:#514721;
	border-color:#ffe57d;
	background:#FFF6BF;
}
#messages .info {
	color:#11438a;
	border-color:#c2dafb;
	background:#e3edfa;
}
#messages .error h4, #messages .warning h4, #messages .info h4 {
	line-height:22px;
	padding-left:30px;
}
#messages .error h4 {
	background:url(../images/icone_error_b.png) no-repeat scroll left top;
}
#messages .warning h4 {
	background:url(../images/icone_warning_b.png) no-repeat scroll left top;
}
#messages .info h4 {
	background:url(../images/icone_info_b.png) no-repeat scroll left top;
}
#messages .error pre {
	padding-top:0.6em;
}
#messages .pointer h4 {
	font-weight:bold;
	font-size:0.8em;
}
#messages .pointer:hover h4 {
	text-decoration: underline;
}
/* Post-javascript */
fieldset.toggles legend {
	background:url(../images/arrow-closed.png) no-repeat scroll 0.2em 0.35em;
	padding-left:0.8em;
	cursor: pointer;
}
fieldset.toggled legend {
	background:#EAEBEE url(../images/arrow-open.png) no-repeat scroll 0 0.5em;
	padding-left:0.8em;
	cursor: pointer;
}
.pointer {
	cursor: pointer;
}

/* Result page */
#observations {
	font-size: 0.8em;
	margin:1em 2.5em;
}
#observations div.observer {
	margin-top: 0.5em;
}
#observations div.observer h2 {
	font-size: 1.3em;
	padding: 0.3em;
	text-align:left;
	color:white
}
#observations div.observer h2 a {
	font-size: 0.9em;
	color:white;
}
#observations div.observer h2 a:hover {
	color:white;
}
#observations div.observer h2 a.direct_link {
	height:0;
	width:0;
	font-size:0;
	display:inline-block;
	overflow:hidden;
	padding:11px 0 0 12px;
	background:url(../images/unicons_sprite.png) no-repeat -22px -18px;
}
#observations div.observer h2 a.direct_link:hover {
	background:url(../images/unicons_sprite.png) no-repeat -22px -29px;
}
#observations div.observer h2 a.anchor {
	height:0;
	width:0;
	font-size:0 !important;
	display:inline-block;
	overflow:hidden;
	padding:11px 0 0 11px;
	background:url(../images/unicons_sprite.png) no-repeat -11px -18px;
}
#observations div.observer h2 a.anchor:hover {
	background:url(../images/unicons_sprite.png) no-repeat -11px -29px;
}
#observations div.observer h2 span.name {
	font-style: italic;
}
#observations div.observer h2 span.icons {
	float: right;
	text-align:right;
}
#observations div.observer h2 span.icons a {
	font-size:0.8em;
	outline:0;
}
#observations div.observer h2 span.icons a:hover {
	text-decoration:none;
}
#observations div.observer h2 span.icons a:hover span.count {
	text-decoration:underline;
}
#observations div.observer h2 span.icons a span.legend {
	display:inline-block;
	overflow:hidden;
	font-size:0;
	height:0;
	width:0;
	padding:18px 18px 0 0;
	vertical-align:bottom;
	margin-right:4px;
}
#observations div.observer h2 span.icons a.infos span.legend {
	background:url(../images/unicons_sprite.png) no-repeat 0 -40px;
}
/* ... */

